--- a/css/bricks.css
+++ b/css/bricks.css
@@ -128,4 +128,8 @@ html, body {
   .footer .copyright {
     font-size: 16px; }
 
+@media screen and (max-width: 1440px) {
+  .footer {
+    bottom: 6px !important; } }
+
 /*# sourceMappingURL=bricks.css.map */
