--- a/css/bricks.scss
+++ b/css/bricks.scss
@@ -48,7 +48,7 @@ html, body {
 
 .content {
   position: absolute;
-  width: 640px;
+  // width: 640px;
   // height: 480px;
   top: 50%;
   left: 50%;
